Refactor handling of healthcheck probes in the model classes
Signed-off-by: Jakub Scholz <www@scholzj.com>